2015-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (lazy_appendv_func, lazy_appendv): Bugfix: append*
	was silently ignoring lists after the first atom, instead of
	throwing an error. Also, it was not detecting the case that
	the last argument is a list which should just be returned,
	and instead trying to find its tail in preparation for the
	next call to lazy_appendv_func, the consequences being runaway
	iteration over an infinite list.

2015-02-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (symacro_k, fun_k): New keyword variables.
	(lexical_lisp1_binding): New static function.
	(eval_init): Initialize symacro_k and fun_k; register
	new intrinsic function lexical-lisp1-binding.

	* match.h (var_k): Existing external name declared.

	* txr.1: Documented lexical-lisp1-binding.

2015-02-09  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: Add dependency froml $(EXTRA_OBJS-y) to header
	file and config.h, so windows resource file is rebuilt
	when the version changes.

2015-02-09  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: Removing bogus eval which refers to nonexistent
	DEP_INSTANTIATE macro.

2015-02-09  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (clean): Remove $(EXTRA_OBJS-y) so the Windows .res
	file is removed.

2015-02-08  Kaz Kylheku  <kaz@kylheku.com>

	Version 104.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

2015-02-07  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (trunc_rem): New function.

	* eval.c (eval_init): Register trunc-rem intrinsic.

	* lib.h (trunc_rem): Declared.

	* txr.1: Documented trunc-rem.

	* tl.vim, txr.vim: Updated.

2015-02-07  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (CFLAGS): Removed puzzling, unnecessary definitions
	of XMALLOC, XCALLOC, XREALLOC and XFREE for $(MPI_OBJS). MPI
	does not use such macros and the allocator is already retargetted
	to use the TXR one.

	* mpi-patches/use-txr-allocator: In this patch, we don't need